--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
+    
+    <meta property="og:title" content="Mushroom Market" />
+    <meta property="og:url" content="https://mushroom-market.com" />
+    <meta property="og:image" content="https://i.postimg.cc/rwHmfJj9/download-2.jpg" />
 
     <title>Mushroom Market</title>
 
