--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
             />
           </div>
           <div class="col display-5 bg-dark mx-5 text-warning rounded">
-            Column
+            <div class="col display-5 bg-dark mx-5 text-warning rounded">
+              <div class="display-2 mt-3">Drops</div>
+              <img
+                class="img-responsive mb-3 rounded"
+                src="./images/Peek 2022-02-11 22-57.gif"
+              />
+            </div>
           </div>
           <div class="col display-5 bg-dark mx-5 text-warning rounded">
             Column
