--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <img
               class="img-responsive mb-3 rounded"
               src="./images/Peek 2022-02-11 20-54.gif"
+              id="responsiveGif"
             />
           </div>
           <div class="col display-5 bg-dark mx-5 text-warning rounded">
@@ -114,6 +115,7 @@
               <img
                 class="img-responsive mb-3 rounded"
                 src="./images/Peek 2022-02-11 22-57.gif"
+                id="responsiveGif
               />
             </div>
           </div>
