change gifs to screenshots

--- a/index.html
+++ b/index.html
@@ -103,27 +103,27 @@
       <div
         class="container-fluid row d-flex justify-content-center text-center my-5"
       >
-        <div class="row d-flex align-content-center">
+        <div
+          class="row d-flex align-content-center row-cols-sm-2 row-cols-md-3"
+        >
           <div class="col display-5 bg-dark mx-5 text-warning rounded">
             <div class="display-2 mt-3">Wishlist</div>
             <img
-              class="img-responsive mb-3 rounded"
-              src="./images/Peek 2022-02-11 20-54.gif"
-              id="responsiveGif"
+              class="img-fluid mb-3 rounded"
+              src="images/Screenshot from 2022-02-12 13-10-25.png"
             />
           </div>
           <div class="col display-5 bg-dark mx-5 text-warning rounded">
             <div class="col display-5 bg-dark mx-5 text-warning rounded">
               <div class="display-2 mt-3">Drops</div>
               <img
-                class="img-responsive mb-3 rounded"
-                src="./images/Peek 2022-02-11 22-57.gif"
-                id="responsiveGif
+                class="img-fluid mb-3 rounded"
+                src="images/Screenshot from 2022-02-12 13-07-57.png"
               />
             </div>
           </div>
           <div class="col display-5 bg-dark mx-5 text-warning rounded">
-            Column
+            <div class="display-2 mt-3">Shop</div>
           </div>
         </div>
       </div>
