make images normal size

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="col display-5 bg-dark mx-5 text-warning rounded">
             <div class="display-2 mt-3">Wishlist</div>
             <img
-              class="img-fluid mb-3 rounded"
+              class="img mb-3 rounded"
               src="images/Screenshot from 2022-02-12 13-10-25.png"
             />
           </div>
@@ -117,7 +117,7 @@
             <div class="col display-5 bg-dark mx-5 text-warning rounded">
               <div class="display-2 mt-3">Drops</div>
               <img
-                class="img-fluid mb-3 rounded"
+                class="img mb-3 rounded"
                 src="images/Screenshot from 2022-02-12 13-07-57.png"
               />
             </div>
